# wide-hand-eval

./: Cargo.toml  README.md
benches/: eval_bench.rs
src/: lib.rs  main.rs
src/core/: card.rs  equity.rs  hand.rs  mod.rs
tests/: hand_eval_logic.rs
